--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,15 +15,49 @@ body {
   border-radius: 10px;
 }
 
-.todo_create {
+.webChat_input {
   display: flex;
   padding-right: 0;
   justify-content: space-between;
-  padding: 10px;
+  padding: 5px;
   max-width: 600px;
   background: #919090e8;
   box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.384);
-  border-radius: 10px;
+  border-radius: 5px;
+}
+.webChat_message {
+  /* margin-top: 20px; */
+  margin: 20px 15px 10px;
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  max-width: 600px;
+  background: #919090e8;
+  box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.384);
+  border-radius: 5px;
+  font-size: 10px;
+}
+
+.message_user{
+  width:21%;
+  font-size: 15px;
+  overflow-x: hidden;
+  word-wrap: break-word;
+  color: #232229;
+
+}
+.message_text{
+  max-width: 70%;
+  padding: 5px;
+  overflow-x: hidden;
+  word-wrap: break-word;
+}
+.message_date{
+  font-size: 10px;
+  width: 15%;
+  overflow-x: hidden;
+  word-wrap: break-word;
+  color: #232229;
 }
 
 .todo_create>button+button {
@@ -34,7 +68,7 @@ body {
   margin-left: 10px;
 }
 
-#task_list {
+#messages_list {
   margin: 15px auto;
 }
 
